Closed
Bug 312747
Opened 20 years ago
Closed 20 years ago
Include line break info for text using white-space: pre
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: aaronlev, Assigned: aaronlev)
References
()
Details
(Keywords: access, fixed1.8)
Attachments
(1 file)
|
1.11 KB,
patch
|
roc
:
review+
bzbarsky
:
superreview+
asa
:
approval1.8rc1+
|
Details | Diff | Splinter Review |
Normally we clean out \r, \n and \t characters in the accessible names of
objects, because those are only indication of the formatting of the markup.
However, in the case of <pre> and other text formatted using white-space: pre
the line break info is important.
Oftentimes tabular information is rendered inaccessible because we remove
linebreak info. For example: http://iwin.nws.noaa.gov/iwin/al/hourly.html
To reproduce:
1. Go to above URL
2. Launch MSAA Inspect and position arrow of text
3. Notice that the accessible name is all on 1 line
What should happen:
Line breaks should be rendered in MSAA Inspect window
| Assignee | ||
Comment 1•20 years ago
|
||
Attachment #199824 -
Flags: superreview?(bzbarsky)
Attachment #199824 -
Flags: review?(roc)
Updated•20 years ago
|
Attachment #199824 -
Flags: superreview?(bzbarsky) → superreview+
Attachment #199824 -
Flags: review?(roc) → review+
| Assignee | ||
Updated•20 years ago
|
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 2•20 years ago
|
||
Comment on attachment 199824 [details] [diff] [review]
If text has computed style of white-space: pre, then don't expose
This has been tested by the screen reader vendors in a special build created
for them.
Attachment #199824 -
Flags: approval1.8rc1?
| Assignee | ||
Comment 3•20 years ago
|
||
Verified by Doug Geoffray from GW Micro.
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Attachment #199824 -
Flags: approval1.8rc1? → approval1.8rc1+
Comment 4•20 years ago
|
||
Verified that this has been fixed in dev build 10/19/05 build from aaron.
| Assignee | ||
Comment 5•20 years ago
|
||
*** Bug 311299 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•