Bug 312747. Include line break info when exposing text in white-space: pre. r=roc, sr=bz